--- a/style1.css
+++ b/style1.css
@@ -1,66 +1,149 @@
-.button1 {
+body{
+  font-family: Verdana, Calibri, sans-serif;
+  margin: 0px;
+  padding: 0px;
+}
 
-  background-color: white; /* Green */
-  border: none;
-  color: black;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
+
+nav > ul{
+  margin: 0px;
+  padding: 0px;
+}
+
+
+nav li{
+  list-style-type: none;
+}
+
+
+nav > ul > li{
+  float: left;
+}
+
+
+.submenu{
+  display: none;
+}
+
+
+nav input[type=checkbox]
+{
+  display: none;
+}
+
+.menu-mobile{
+  display: none;
+}
+
+nav {
+  width: 100%;
+  background-color: #424558;
+}
+
+nav > ul > li{
+  float: left;
+  position: relative;
+}
+
+
+nav > ul::after{
+  content: "";
+  display: table;
+  clear: both;
+}
+
+nav a{
   display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-  border: 2px solid royalblue; /* couleur du contours*/
-}
-.button15:hover {
-  background-color: #008CBA;
-  color: white;
-  
-}
-
-/* Bouton 2 */
-
-.button2 {
-
-  background-color: white; /* Green */
-  border: none;
-  color: black;
-  padding: 16px 32px;
-  text-align: center;
   text-decoration: none;
+}
+
+nav > ul > li > a{
+  padding: 20px 30px;
+  color: #FFF;
+}
+
+nav li:hover .submenu{
   display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-  border: 2px solid royalblue; /* couleur du contours*/
-}
-.button25:hover {
-  background-color: #008CBA;
-  color: white;
-  
+  position: absolute;
+  top: 100%;
+  left: 0px;
+  padding: 0px;
+  z-index: 100000;
+
 }
 
-/* Bouton 3 */
+.submenu li{
+  border-bottom: 1px solid #CCC;
 
-.button3 {
-
-  background-color: white; /* Green */
-  border: none;
-  color: black;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-  border: 2px solid royalblue; /* couleur du contours*/
 }
-.button35:hover {
-  background-color: #008CBA;
-  color: white;
-  
+
+.submenu li a{
+  padding: 15px 30px;
+  font-size: 13px;
+  color: #222538;
+  width: 270px;
+}
+
+
+.menu-html:hover{
+  border-top: 5px solid #e44d26;
+  background-color: RGBa(228, 77, 38, 0.15);
+}
+
+.menu-css:hover{
+  border-top: 5px solid #0070bb;
+  background-color: RGBa(000, 112, 192, 0.15);
+}
+
+.menu-js:hover{
+  border-top: 5px solid #f1dc4f;
+  background-color: RGBa(241, 211, 79, 0.15);
+}
+
+
+.menu-contact:hover{
+  border-top: 5px solid #BBB;
+  background-color: RGBa(220, 220, 220, 0.15);
+}
+
+
+
+/* a enlever plus tard */
+nav > ul > li:hover a{
+  padding: 15px 30px 20px 30px;
+}
+
+
+
+
+.menu-html .submenu{
+  background-color: RGB(230, 100, 40);
+}
+.menu-css .submenu{
+  background-color: RGB(000, 160, 240);
+}
+.menu-js .submenu{
+  background-color: RGB(251, 216, 99);
+}
+
+
+.submenu li:hover a{
+  color: #EEE;
+  font-weight: bold; 
+}
+.menu-html .submenu li:hover{
+  background-color: RGB(210, 77, 60);
+}
+.menu-css .submenu li:hover{
+  background-color: RGB(000, 115, 200);
+}
+.menu-js .submenu li:hover{
+  background-color: RGB( 200, 165, 75);
+}
+
+
+
+/*Lorsque la case est cochée (des qu'un utiisateur appuie sur *notre bouton), le menu entier s'affiche*/
+nav input[type=checkbox]:checked ~ ul{
+  display: block;
 }
